Fix: Align Back to Top with copyright text and reduce watermark spacing further

--- a/koda-design-system-final.css
+++ b/koda-design-system-final.css
@@ -376,7 +376,7 @@ select:focus {
 }
 
 .back-to-top {
-  margin-top: -40px !important;
+  margin-top: -88px !important;
   margin-bottom: 0px !important;
 }
 
@@ -393,7 +393,7 @@ select:focus {
 
 .footer-watermark {
   position: absolute;
-  bottom: -30px;
+  bottom: -60px;
   right: 80px;
   opacity: 0.3;
   pointer-events: none;
